<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/nav_height"
    tools:context=".ui.navWallet.WalletFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_color"
        app:layout_constraintBottom_toTopOf="@id/block_content"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/block_status_bar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_head"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:src="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_status_bar"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/starbucks"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_store"
        app:layout_constraintStart_toEndOf="@id/iv_head"
        app:layout_constraintTop_toTopOf="@id/iv_head" />

    <Button
        android:id="@+id/btn_store"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/btn_capsule"
        android:text="@string/store"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_head"
        app:layout_constraintStart_toEndOf="@id/iv_head"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageButton
        android:id="@+id/btn_notifications"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/effect_ripple_circle"
        android:contentDescription="@null"
        android:src="@drawable/ic_notifications"
        app:layout_constraintEnd_toStartOf="@id/btn_setting"
        app:layout_constraintTop_toTopOf="@id/iv_head" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/effect_ripple_circle"
        android:contentDescription="@null"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_head" />

    <LinearLayout
        android:id="@+id/block_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_card"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_store">

        <com.example.swipertest.ui.common.TabView
            android:id="@+id/btn_activity_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cvIcon="@drawable/ic_activity_code"
            app:cvTitle="@string/activity_code" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray" />

        <com.example.swipertest.ui.common.TabView
            android:id="@+id/btn_e_commerce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cvIcon="@drawable/ic_e_commerce"
            app:cvTitle="@string/e_commerce" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray" />

        <com.example.swipertest.ui.common.TabView
            android:id="@+id/btn_mall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cvIcon="@drawable/ic_mall"
            app:cvTitle="@string/mall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_btn">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="2dp"
            app:tabMode="scrollable">

            <!-- 此處僅為預覽示意，實際上 tab 要動態添加 -->
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_record" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_ev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_voucher" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>