<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:navGraph="@navigation/main_navigation"
        tools:layout="@layout/fragment_wallet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:contentDescription="@null"
        android:src="@drawable/bg_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/nav_phone" />

    <com.example.swipertest.ui.common.TabView
        android:id="@+id/nav_phone"
        android:layout_width="0dp"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        app:cvIcon="@drawable/selector_phone"
        app:cvTextColor="@color/color_nav_text"
        app:cvTextSize="12sp"
        app:cvTitle="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_chat"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.swipertest.ui.common.TabView
        android:id="@+id/nav_chat"
        android:layout_width="0dp"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        app:cvIcon="@drawable/selector_chat"
        app:cvTextColor="@color/color_nav_text"
        app:cvTextSize="12sp"
        app:cvTitle="@string/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        app:layout_constraintStart_toEndOf="@id/nav_phone" />

    <ImageView
        android:id="@+id/btn_camera"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:elevation="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@null"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorPrimary" />

    <com.example.swipertest.ui.common.TabView
        android:id="@+id/nav_explore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cvIcon="@drawable/selector_explore"
        app:cvTextColor="@color/color_nav_text"
        app:cvTextSize="12sp"
        app:cvTitle="@string/explore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_wallet"
        app:layout_constraintStart_toEndOf="@id/btn_camera" />

    <com.example.swipertest.ui.common.TabView
        android:id="@+id/nav_wallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cvIcon="@drawable/selector_wallet"
        app:cvTextColor="@color/color_nav_text"
        app:cvTextSize="12sp"
        app:cvTitle="@string/wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nav_explore" />

    <TextView
        android:id="@+id/tv_wallet_count"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:elevation="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/circle"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="1"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/nav_wallet"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@id/nav_wallet"
        app:layout_constraintTop_toTopOf="@id/nav_wallet" />

</androidx.constraintlayout.widget.ConstraintLayout>
