<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.navWallet.RewardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/block_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/block_ad"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/rong_bi"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_xnc"
                app:layout_constraintStart_toEndOf="@id/iv_icon"
                app:layout_constraintTop_toTopOf="@id/iv_icon" />

            <TextView
                android:id="@+id/tv_xnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/xnc"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                app:layout_constraintStart_toEndOf="@id/iv_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_xnc_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintTop_toTopOf="@id/iv_icon"
                tools:text="123456" />

            <TextView
                android:id="@+id/tv_xnc_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="end"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_xnc"
                app:layout_constraintTop_toBottomOf="@id/tv_amount"
                tools:text=".1234" />

            <ProgressBar
                android:id="@+id/pb_day"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="false"
                android:max="365"
                android:progressDrawable="@drawable/effect_progress_bar"
                app:layout_constraintEnd_toStartOf="@id/tv_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icon"
                tools:progress="328" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/desc_expire"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/pb_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/pb_day" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@android:color/darker_gray"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toTopOf="@id/btn_more"
                app:layout_constraintTop_toBottomOf="@id/pb_day">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_reward" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/effect_ripple_rectangle"
                android:text="@string/more"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_rv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_wallet_count"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="@drawable/circle"
        android:backgroundTint="@android:color/holo_red_light"
        android:elevation="4dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="1"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_ad"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ad_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/desc_ad"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_ad"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ad_place"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_ad"
            app:layout_constraintStart_toEndOf="@id/iv_ad"
            app:layout_constraintTop_toBottomOf="@id/tv_ad_content" />

        <TextView
            android:id="@+id/tv_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_place" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>